Adjustments to fix text wrap functionality.
git-svn-id: https://ncisvn.nci.nih.gov/svn/ncim/trunk/software/ncimbrowser@295 b145b987-6716-48ef-8e4a-68a7679c2f12

--- a/web/css/styleSheet.css
+++ b/web/css/styleSheet.css
@@ -230,7 +230,9 @@ h3
 .datatable 
 {
  font-size: 11px;
- width: 708px;
+ width: 690px;
+ margin: 0;
+ padding: 0;
 }
 
 .datatableheader 
@@ -243,20 +245,18 @@ h3
 
 .datacelltext 
 {
- white-space: nowrap;
  font-size: 11px;
  color: #444444;
+ word-wrap: break-word;
 }
 
 .search-globalnav 
 {
- width: 357px;
  height: 82px;
  background-color: #fef1c8;
+ padding: 0;
  margin-left: 383px;
- border-color: red;
- border-width: 0px;
- border-style: solid;
+ margin-right: 0;
 }
 
 .searchbox-top 
@@ -406,10 +406,11 @@ h3
  background-image: url(../images/content-background.gif);
  background-repeat: repeat-x;
  padding-top: 25px;
- padding-right: 11px;
- padding-bottom: 0;
- padding-left: 12px;
+ padding-right: 5px;
+ padding-bottom: 2;
+ padding-left: 5px;
  word-wrap: break-word;
+ margin: 0;
 }
 
 .global-nav, .global-nav a 
@@ -422,7 +423,7 @@ h3
 /* ------------- Tab bar classes ------------- */
 .tabtable 
 {
- width: 708px;
+ width: 690px;
  padding: 0;
  margin: 0;
 }
